Changelog
=========

1.3-dev - (unreleased)
----------------------

1.2 - (2013-11-08)
------------------
* Bug fix: make the displayed embeded maps larger
  [tiberich #17266]

1.1 - (2013-11-05)
------------------
* Feature: Added legend field to the LandItem content type
  [tiberiu #16962]

1.0  - (initial release)
------------------------
* Initial release
