@@ -3,6 +3,10 @@ Changelog
 
 1.3-dev - (unreleased)
 ----------------------
+* Bug fix: reconfigure iframe width to make the wider
+  [tiberich #17266]
+* Bug fix: only set width/height if embeding an iframe
+  [tiberich #17266]
 
 1.2 - (2013-11-08)
 ------------------
